--- a/CardWallet/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/CardWallet/en.lproj/MainStoryboard_iPhone.storyboard
@@ -8,69 +8,67 @@
         <scene sceneID="XMm-pK-a2d">
             <objects>
                 <navigationController definesPresentationContext="YES" id="W7y-dU-u8e" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="hFf-4T-wqd">
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="blackOpaque" prompted="NO"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="blackOpaque" id="hFf-4T-wqd">
+                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="srn-hn-h3e" kind="relationship" relationship="rootViewController" id="SuB-bl-35g"/>
+                        <segue destination="Qhj-WF-6UP" kind="relationship" relationship="rootViewController" id="nON-VF-D6k"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bDc-rV-twe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1057" y="-237"/>
+            <point key="canvasLocation" x="-1277" y="-263"/>
         </scene>
-        <!--Store Collection - Stores-->
-        <scene sceneID="JKV-fO-nRb">
+        <!--Store Collection View Controller - Stores-->
+        <scene sceneID="Hig-hp-r4z">
             <objects>
-                <viewController title="Stores" id="srn-hn-h3e" customClass="StoreCollection" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="aUk-dX-SVr">
+                <collectionViewController autoresizesArchivedViewToFullSize="NO" id="Qhj-WF-6UP" customClass="StoreCollectionViewController" sceneMemberID="viewController">
+                    <collectionView key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="hGJ-V2-1eZ">
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f3r-g7-XrJ">
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="To Card List">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="kd9-aA-CW9" kind="push" id="Aba-lN-EU2"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gFk-0C-sXG">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6V9-q8-JJf">
+                            <size key="itemSize" width="62" height="86"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="iconCell" id="CG7-w1-vZ9">
+                                <rect key="frame" x="0.0" y="0.0" width="62" height="86"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="62" height="86"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Costco" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mvv-gC-Yfz">
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="131" id="Wdb-Si-n5z"/>
+                                    <constraint firstAttribute="bottom" secondItem="mvv-gC-Yfz" secondAttribute="bottom" constant="2" id="939-t2-k26"/>
+                                    <constraint firstItem="mvv-gC-Yfz" firstAttribute="leading" secondItem="CG7-w1-vZ9" secondAttribute="leading" constant="4" id="vpQ-tS-UoK"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Add item">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
                                 <connections>
-                                    <action selector="addStore:" destination="srn-hn-h3e" eventType="touchUpInside" id="PYE-YJ-9tQ"/>
+                                    <segue destination="kd9-aA-CW9" kind="push" id="pFA-cy-LeZ"/>
                                 </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="trailing" secondItem="gFk-0C-sXG" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="3wz-GC-WUa"/>
-                            <constraint firstItem="gFk-0C-sXG" firstAttribute="leading" secondItem="f3r-g7-XrJ" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="Mes-4o-xkK"/>
-                            <constraint firstAttribute="bottom" secondItem="gFk-0C-sXG" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="YXY-Ek-PLL"/>
-                            <constraint firstItem="f3r-g7-XrJ" firstAttribute="leading" secondItem="aUk-dX-SVr" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="aOG-Z3-s0Z"/>
-                            <constraint firstAttribute="bottom" secondItem="f3r-g7-XrJ" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="eAj-JX-ae5"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" title="Stores" id="WVh-A5-DpH"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="s0D-cQ-Lqo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="Qhj-WF-6UP" id="dSE-MR-Er1"/>
+                            <outlet property="delegate" destination="Qhj-WF-6UP" id="2vV-xG-3hr"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" title="Stores" id="mvp-jz-ZWs"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yFa-JF-JYa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-534" y="-237"/>
+            <point key="canvasLocation" x="-546" y="-263"/>
         </scene>
         <!--Table View Controller - Gift Cards-->
         <scene sceneID="x3R-fA-tzl">
@@ -100,15 +98,30 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hcd-5k-QsV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-55" y="-237"/>
+            <point key="canvasLocation" x="201" y="-263"/>
         </scene>
     </scenes>
     <classes>
         <class className="NSLayoutConstraint" superclassName="NSObject">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
         </class>
-        <class className="StoreCollection" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/StoreCollection.h"/>
+        <class className="StoreCollectionViewController" superclassName="UICollectionViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/StoreCollectionViewController.h"/>
+        </class>
+        <class className="UICollectionReusableView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionReusableView.h"/>
+        </class>
+        <class className="UICollectionViewCell" superclassName="UICollectionReusableView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewCell.h"/>
+        </class>
+        <class className="UICollectionViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewController.h"/>
+        </class>
+        <class className="UICollectionViewFlowLayout" superclassName="UICollectionViewLayout">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewFlowLayout.h"/>
+        </class>
+        <class className="UICollectionViewLayout" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewLayout.h"/>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
